--- a/uniguia/Base.lproj/Main.storyboard
+++ b/uniguia/Base.lproj/Main.storyboard
@@ -400,6 +400,6 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="z04-vS-5Cf"/>
-        <segue reference="Yzg-s5-vvO"/>
+        <segue reference="8SS-Uo-2sZ"/>
     </inferredMetricsTieBreakers>
 </document>
